force-app/main/default/objects/Resorce__c/Resorce__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>Resorce Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>