force-app/main/default/objects/Resorce__c/fields/Availability_Status__c.field-meta.xml
<CustomField>
    <fullName>Availability_Status__c</fullName>
    <formula>IF( Stock_Level__c  = 0,&quot;Out Of Stock&quot;, IF( Stock_Level__c  &lt;=  Minimum_Threshold__c , &quot;Low Stock&quot;, &quot;Available&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Availability Status</label>
    <type>Text</type>
</CustomField>