force-app/main/default/objects/Resorce__c/fields/Minimum_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Threshold__c</fullName>
    <inlineHelpText>Alert when stock falls below this level</inlineHelpText>
    <label>Minimum Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>