force-app/main/default/objects/Resorce__c/fields/Resource_Type__c.field-meta.xml
<CustomField>
    <fullName>Resource_Type__c</fullName>
    <label>Resource Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Food</fullName>
            </value>
            <value>
                <fullName>Water,</fullName>
            </value>
            <value>
                <fullName>Medicine</fullName>
            </value>
            <value>
                <fullName>Blankets</fullName>
            </value>
            <value>
                <fullName>Clothing</fullName>
            </value>
            <value>
                <fullName>First Aid</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>