force-app/main/default/objects/Resorce__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>