force-app/main/default/objects/Resorce__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pieces</fullName>
            </value>
            <value>
                <fullName>Kilograms</fullName>
            </value>
            <value>
                <fullName>Liters</fullName>
            </value>
            <value>
                <fullName>Boxes</fullName>
            </value>
            <value>
                <fullName>Sets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>